// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should accept onChange function 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={false}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="sc-AxhCb eJojxy"
  />
  <span
    className="sc-AxgMl aaWWq"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should call default props onChange function when no onChange property is passed 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={false}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="sc-AxhCb eJojxy"
  />
  <span
    className="sc-AxgMl aaWWq"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should render Checkbox 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={false}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={false}
    className="sc-AxhCb eJojxy"
  />
  <span
    className="sc-AxgMl aaWWq"
  >
    
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with checked prop 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={true}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
  />
  <div
    checked={true}
    className="sc-AxhCb cLwTNS"
  >
    <span
      className="sc-AxhUy eEXwPQ sc-AxjAm jWlVxK lni lni-checkmark"
    />
  </div>
  <span
    className="sc-AxgMl aaWWq"
  >
    
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with value and label 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={false}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={false}
    className="sc-AxhCb eJojxy"
  />
  <span
    className="sc-AxgMl aaWWq"
  >
    Test
  </span>
</label>
`;

exports[`Checkbox should render Checkbox with value and label, and be checked 1`] = `
<label
  className="sc-AxheI bIWrzC"
>
  <input
    checked={true}
    className="sc-AxiKw iRBKSw"
    onChange={[Function]}
    type="checkbox"
    value={1}
  />
  <div
    checked={true}
    className="sc-AxhCb cLwTNS"
  >
    <span
      className="sc-AxhUy eEXwPQ sc-AxjAm jWlVxK lni lni-checkmark"
    />
  </div>
  <span
    className="sc-AxgMl aaWWq"
  >
    Test
  </span>
</label>
`;
